// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Albums 1`] = `
<div>
  <span
    class="undefined albums svelte-qfbqtm"
  >
    <h3
      class="svelte-qfbqtm"
    >
      5 albums
    </h3>
     
    <ul
      class="svelte-qfbqtm"
    >
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
    </ul>
     
    <iframe
      aria-hidden="true"
      src="about:blank"
      style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
  </span>
  
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Artists 1`] = `
<div>
  <span
    class="undefined artists svelte-qfbqtm"
  >
    <h3
      class="svelte-qfbqtm"
    >
      5 artists
    </h3>
     
    <ul
      class="svelte-qfbqtm"
    >
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
         
        <span
          class="svelte-1vgpzqt"
          role="article"
        >
          <div
            class="content svelte-1vgpzqt"
          >
            <span
              class="artwork svelte-1vgpzqt"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-hn7eai"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-1vgpzqt"
            >
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1lod44n"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-1vgpzqt"
          >
            <h3
              class="svelte-1vgpzqt"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1fiafx9"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
    </ul>
     
    <iframe
      aria-hidden="true"
      src="about:blank"
      style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
  </span>
  
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Tracks 1`] = `
<div>
  <span
    class="undefined tracks svelte-qfbqtm"
  >
    <h3
      class="svelte-qfbqtm"
    >
      5 tracks
    </h3>
     
    <ul
      class="svelte-qfbqtm"
    >
      <li
        class="svelte-qfbqtm"
      >
        <div
          class="undefined root svelte-1bozxge"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-hn7eai"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1bozxge"
          >
            <span
              class="title svelte-1bozxge"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-17zgehq"
          >
            <button
              class="iconOnly noBorder svelte-1lod44n"
            >
              <i
                class="material-icons svelte-1lod44n"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
        <div
          class="undefined root svelte-1bozxge"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-hn7eai"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1bozxge"
          >
            <span
              class="title svelte-1bozxge"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-17zgehq"
          >
            <button
              class="iconOnly noBorder svelte-1lod44n"
            >
              <i
                class="material-icons svelte-1lod44n"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
        <div
          class="undefined root svelte-1bozxge"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-hn7eai"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1bozxge"
          >
            <span
              class="title svelte-1bozxge"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-17zgehq"
          >
            <button
              class="iconOnly noBorder svelte-1lod44n"
            >
              <i
                class="material-icons svelte-1lod44n"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
        <div
          class="undefined root svelte-1bozxge"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-hn7eai"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1bozxge"
          >
            <span
              class="title svelte-1bozxge"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-17zgehq"
          >
            <button
              class="iconOnly noBorder svelte-1lod44n"
            >
              <i
                class="material-icons svelte-1lod44n"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-qfbqtm"
      >
        <div
          class="undefined root svelte-1bozxge"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-hn7eai"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1bozxge"
          >
            <span
              class="title svelte-1bozxge"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-17zgehq"
          >
            <button
              class="iconOnly noBorder svelte-1lod44n"
            >
              <i
                class="material-icons svelte-1lod44n"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
    </ul>
     
    <iframe
      aria-hidden="true"
      src="about:blank"
      style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
  </span>
  
</div>
`;
